--- a/src/quiver.sty
+++ b/src/quiver.sty
@@ -4,16 +4,18 @@
 % This package is currently a wrapper around the `tikz-cd` package, importing necessary TikZ
 % libraries, and defining a new TikZ style for curves of a fixed height.
 %
-% Version: 1.0.1
+% Version: 1.1.0
 % Authors:
 % - varkor (https://github.com/varkor)
 % - AndréC (https://tex.stackexchange.com/users/138900/andr%C3%A9c)
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{quiver}[2020/11/27 quiver]
+\ProvidesPackage{quiver}[2020/12/18 quiver]
 
 % `tikz-cd` is necessary to draw commutative diagrams.
 \RequirePackage{tikz-cd}
+% `amssymb` is necessary for `\lrcorner` and `\ulcorner`.
+\RequirePackage{amssymb}
 % `calc` is necessary to draw curved arrows.
 \usetikzlibrary{calc}
 % `pathmorphing` is necessary to draw squiggly arrows.
