--- a/src/quiver.sty
+++ b/src/quiver.sty
@@ -10,7 +10,7 @@
 % - AndréC (https://tex.stackexchange.com/users/138900/andr%C3%A9c)
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{quiver}[2020/12/18 quiver]
+\ProvidesPackage{quiver}[2021/01/11 quiver]
 
 % `tikz-cd` is necessary to draw commutative diagrams.
 \RequirePackage{tikz-cd}
@@ -34,5 +34,7 @@
 \tikzset{tail reversed/.code={\pgfsetarrowsstart{tikzcd to}}}
 \tikzset{2tail/.code={\pgfsetarrowsstart{Implies[reversed]}}}
 \tikzset{2tail reversed/.code={\pgfsetarrowsstart{Implies}}}
+% TikZ arrow styles.
+\tikzset{no body/.style={/tikz/dash pattern=on 0 off 1mm}}
 
 \endinput
