Fix infinite loop in parser

--- a/src/tests/parser.tex
+++ b/src/tests/parser.tex
@@ -268,3 +268,6 @@ begin{tikzcd}
 	\arrow[curve={height=X}, from=1-1, to=1-2]
 	\arrow[curve={height=X}, from=1-1, to=1-2]
 \end{tikzcd}
+
+% Unexpected end of diagram.
+\begin{tikzcd} X
