Make enter create new line in tikzcd input

--- a/src/tests/parser.tex
+++ b/src/tests/parser.tex
@@ -87,6 +87,12 @@
 	\arrow[shorten <=4pt, shorten >=4pt, Rightarrow, from=2, to=1p]
 \end{tikzcd}
 
+% `dashed`, not `dash`.
+\begin{tikzcd}
+	A & B
+	\arrow[from=1-1, to=1-2, dashed]
+\end{tikzcd}
+
 %%% Invalid diagrams %%%
 
 % Incorrect start.
