Parse near start/end and friends

--- a/src/tests/parser.tex
+++ b/src/tests/parser.tex
@@ -93,6 +93,11 @@
 	\arrow[from=1-1, to=1-2, dashed]
 \end{tikzcd}
 
+\begin{tikzcd}
+	A & B
+	\arrow["f" near start, from=1-1, to=1-2]
+\end{tikzcd}
+
 %%% Invalid diagrams %%%
 
 % Incorrect start.
