Add support for `swap` and multiple primes in parser

--- a/src/tests/parser.tex
+++ b/src/tests/parser.tex
@@ -117,6 +117,12 @@
 	A \arrow[loop]
 \end{tikzcd}
 
+% Swapping label alignment.
+\begin{tikzcd}
+	A & B
+	\arrow["f"'', swap, from=1-1, swap, to=1-2]
+\end{tikzcd}
+
 %%% Invalid diagrams %%%
 
 % Incorrect start.
