--- a/src/tests/parser.tex
+++ b/src/tests/parser.tex
@@ -104,6 +104,12 @@
 	\arrow["\shortmid"{marking, text={rgb,255:red,214;green,92;blue,92}}, color={rgb,255:red,214;green,92;blue,92}, from=1-1, to=1-2]
 \end{tikzcd}
 
+% Double barred arrow.
+\begin{tikzcd}
+	\bullet & \bullet
+	\arrow["{\shortmid\shortmid}"{marking}, from=1-1, to=1-2]
+\end{tikzcd}
+
 % Loops of different radii, angles, and direction.
 \begin{tikzcd}
 	\bullet & \bullet & \bullet
