Add test for parsing `between`

--- a/src/tests/parser.tex
+++ b/src/tests/parser.tex
@@ -141,6 +141,12 @@
 	\arrow["f"'', swap, from=1-1, swap, to=1-2]
 \end{tikzcd}
 
+% `between'
+\begin{tikzcd}
+	\bullet & \bullet
+	\arrow[between={0.3}{0.7}, from=1-1, to=1-2]
+\end{tikzcd}
+
 %%% Invalid diagrams %%%
 
 % Incorrect start.
