Optimise export of marked arrows

--- a/src/tests/parser.tex
+++ b/src/tests/parser.tex
@@ -147,6 +147,12 @@
 	\arrow[between={0.3}{0.7}, from=1-1, to=1-2]
 \end{tikzcd}
 
+% Shortened marked arrow.
+\begin{tikzcd}
+	\bullet & \bullet
+	\arrow["\shortmid"{marking, pos=0.75}, between={0.5}{1}, from=1-1, to=1-2]
+\end{tikzcd}
+
 %%% Invalid diagrams %%%
 
 % Incorrect start.
