Fixed a warning with `between`

--- a/package/quiver-doc.tex
+++ b/package/quiver-doc.tex
@@ -153,7 +153,8 @@ The \quiver{} version number is tied to the editor version number. This is refle
         1.0.1 & 2020-11-27 & Added the \texttt{tail reversed}, \texttt{2tail}, and \texttt{2tail reversed} styles. \\
         1.1.0 & 2020-12-18 & Added a dependency. \\
         1.2.0 & 2021-01-11 & Added the \texttt{no body} style. \\
-        1.5.5 & 2024-06-24 & Added the \texttt{between} style.
+        1.5.5 & 2025-06-24 & Added the \texttt{between} style. \\
+        1.6.0 & 2025-09-20 & Fixed a warning with the \texttt{between} style in combination with \texttt{shift left} and \texttt{shift right}.
     \end{tblr}
 \end{center}
 
